# monzo-cli

./: .gitignore  Cargo.toml  Makefile  README.md  README.rdoc  Rakefile  SKILLS.md  monzo.gemspec  monzo.rdoc
.github/workflows/: ci.yml  release.yml
features/: monzo.feature
lib/: config_parser.rb  monzo.rb  monzo_api.rb
lib/api/: mondo.rb
lib/api/mondo/: balance.rb  client.rb
lib/monzo/: config_parser.rb  monzo_api.rb  version.rb
monzo-rs/src/: analytics.rs  auth.rs  config.rs  display.rs
spec/: config_parser_help.rb  config_parser_spec.rb  default_test.rb  monzo_api_spec.rb  spec_helper.rb
spec/assets/: bad_test_config.yml  test_config.yml
src/: analytics.rs  auth.rs  client.rs  config.rs  main.rs  models.rs
