[package]
name = "monzo-cli"
version = "1.0.0"
edition = "2021"
authors = ["Cesar Ferreira"]
description = "A modern CLI for Monzo Bank - query balances, transactions, pots, and get spending insights"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
comfy-table = "7.2"
colored = "3"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
open = "5"
tiny_http = "0.12"
url = "2"
uuid = { version = "1", features = ["v4"] }
csv = "1.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
